--- a/src/scss/core/Reset.scss
+++ b/src/scss/core/Reset.scss
@@ -2,9 +2,15 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    border: none;
+
 }
 
 a {
     text-decoration: none;
     color: inherit;
+}
+
+li {
+    list-style: none;
 }
