--- a/src/scss/components/CharacterDetail.scss
+++ b/src/scss/components/CharacterDetail.scss
@@ -6,10 +6,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     padding: 40px;
-    padding-bottom: 100px;
-    width: 100%
+    padding-top: 15px;
+    width: 100%;
+    height: 100vh;
+
 }
 
 .character-detail {
@@ -17,15 +18,41 @@
     color: white;
     display: flex;
     width: 70%;
-    padding: 30px;
-    border-radius: 15px;
+    padding: 20px;
+    box-shadow: 0px 0px 15px rgba(35, 192, 231, 0.938);
+    border-radius: 10px;
+
+
+
+
+    img {
+        max-width: 100%;
+        max-width: 200px;
+        height: auto;
+        border-radius: 10px;
+        box-shadow: 0px 0px 15px rgba(230, 230, 230, 0.89);
+    }
 
     h2 {
         padding-left: 20px;
+        padding-bottom: 7px;
     }
 
     p {
         padding-left: 20px;
+        padding-top: 7px;
+    }
+
+    @media (max-width: 768px) {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+        width: 100%;
+
+        img {
+            max-width: 90%;
+        }
     }
 
 
@@ -37,6 +64,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    padding: 7px;
+
 
 }
 
@@ -48,6 +77,7 @@
     padding: 10px;
     margin: 15px;
     border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(66, 165, 245, 0.5);
 }
 
 .link-back:hover {
@@ -56,4 +86,5 @@
     text-decoration: underline;
     padding: 10px;
     border-radius: 5px;
+
 }
