--- a/src/scss/components/CharacterList.scss
+++ b/src/scss/components/CharacterList.scss
@@ -1,6 +1,9 @@
 .character-list-container {
     background-color: black;
     padding: 40px;
+    color: white;
+    height: 100%;
+
 
 }
 
@@ -11,11 +14,15 @@
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 20px;
 
-
     img {
         width: 100%;
         height: auto;
     }
 
-
+    @media (max-width: 768px) {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+    }
 }
