--- a/src/scss/components/CharacterCard.scss
+++ b/src/scss/components/CharacterCard.scss
@@ -5,9 +5,11 @@
     color: white;
     text-align: left;
     padding-bottom: 5px;
+    width: 200px;
+    max-width: 90%;
 
     img {
-        max-width: fit-content;
+        max-width: 100%;
         height: auto;
 
     }
