--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -5,3 +5,4 @@
 @use 'components/CharacterList.scss';
 @use 'components/CharacterCard.scss';
 @use 'components/CharacterDetail.scss';
+@use 'components/Footer.scss';
